--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     /* border: 3px solid blue; */
     margin-top: 40vh;
     height: 20vh;
+    max-width: 100vw;
   }
 
 h1 {
@@ -18,11 +19,12 @@ h1 {
   }
 
 h2 {
-    font-size: 25px;
+    font-size: 30px;
     text-align: center;
     color: white;
     padding: 25px 100px;
     font-family: 'Source Code Pro', monospace;
+    font-weight: bolder;
   }
 
 button {
@@ -65,14 +67,15 @@ button:hover {
 }
 
 .playerInput {
-  font-size: 20px;
+  font-size: 30px;
+  text-align: center;
   font-family: 'Source Code Pro', monospace;
+  /* font-weight: bold; */
   display: none;
   outline: none;
   border: none;
   background-color: black;
   color: white;
-  padding: 100px 20vw;
-  overflow: visible;
   width: 75vw;
+  padding: 50px 12vw;
 }
