--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body {
     align-items: center;
     background: black;
     /* border: 3px solid blue; */
-    margin-top: 40vh;
     height: 20vh;
     max-width: 100vw;
   }
@@ -13,6 +12,7 @@ h1 {
     text-align: center;
     color: white;
     padding-top: 25px;
+    margin-top: 40vh;
     font-family: 'Source Code Pro', monospace;
     transition-duration: 1s;
     letter-spacing: normal;
@@ -53,6 +53,7 @@ button:hover {
 }
 
 .game-text {
+    margin-top: 20vh;
     transition-duration: 1.5s;
     display: none;  
     opacity: 0;
@@ -81,8 +82,14 @@ button:hover {
   padding: 50px 12vw;
 }
 
-.added {
+.instruction {
   padding: 20px;
   color: grey;
   font-size: 20px;
+}
+
+.transition {
+  padding-bottom: 20px;
+  color: rgb(255, 255, 255);
+  font-size: 30px;
 }
