--- a/style.css
+++ b/style.css
@@ -5,14 +5,16 @@ body {
     /* border: 3px solid blue; */
     height: 20vh;
     max-width: 100vw;
+    /* padding-top: 25px; */
   }
 
 h1 {
     font-size: 70px;
     text-align: center;
     color: white;
-    padding-top: 25px;
+    /* padding-top: 25px; */
     margin-top: 40vh;
+    /* margin-top: 40vh; */
     font-family: 'Source Code Pro', monospace;
     transition-duration: 1s;
     letter-spacing: normal;
@@ -22,7 +24,7 @@ h2 {
     font-size: 30px;
     text-align: center;
     color: white;
-    padding: 25px 100px;
+    /* padding: 20px 100px 0 0; */
     font-family: 'Source Code Pro', monospace;
     font-weight: bolder;
   }
@@ -53,7 +55,8 @@ button:hover {
 }
 
 .text {
-  margin-top: 20vh;
+  /* margin-top: 20vh; */
+  margin: 30vh 10vw 0;
   transition-duration: 1.5s;
 }
 
@@ -69,7 +72,7 @@ button:hover {
 
 .hint-text {
   color: rgb(254, 254, 114);
-  white-space: pre;
+  /* white-space: pre; */
 }
 
 .playerInput {
@@ -88,7 +91,7 @@ button:hover {
 
 .instruction {
   padding: 20px;
-  color: grey;
+  color: rgb(183, 183, 183);
   font-size: 20px;
 }
 
@@ -100,3 +103,24 @@ button:hover {
   transition-duration: inherit;
 }
 
+.inv {
+  padding: 20px;
+  color: rgb(10, 222, 255);
+  font-size: 20px;
+}
+
+.firstInvText {
+  padding-top: 30px;
+  color: rgb(183, 183, 183);
+  font-size: 22.5px;
+}
+
+.invText {
+  color: rgb(183, 183, 183);
+  font-size: 22.5px;
+}
+
+.invItem {
+  color: rgb(94, 185, 255);
+  font-size: 25px;
+}
