--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 body {
     /* height: 100vh; */
-    align-items: center;
+    /* display: flex;
+    flex-direction: column;
+    align-items: center; */
+    height: 100vh;
     background: black;
     /* border: 3px solid blue; */
-    height: 20vh;
+    /* height: 20vh; */
     max-width: 100vw;
-    /* padding-top: 25px; */
+    display: flex;
+    flex-direction: column;
   }
 
 h1 {
@@ -57,13 +61,15 @@ button:hover {
 
 .text {
   /* margin-top: 20vh; */
-  margin: 30vh 20vw 0;
+  /* margin: 30vh 10vw 0; */
+  margin: auto;
   transition-duration: 1.5s;
+  vertical-align: middle;
 }
 
 .game-text {
     transition-duration: inherit;
-    display: none;  
+    /* display: none;   */
     opacity: 0;
 }
 
@@ -77,6 +83,7 @@ button:hover {
 }
 
 #playerInput {
+  margin: 20px auto;
   font-size: 30px;
   text-align: center;
   font-family: 'Source Code Pro', monospace;
@@ -87,11 +94,14 @@ button:hover {
   background-color: black;
   color: white;
   width: 75vw;
-  padding: 50px 12vw;
+  /* padding: 50px 12vw; */
+}
+
+.added {
+  padding-top: 25px;
 }
 
 .instruction {
-  padding: 20px;
   color: rgb(183, 183, 183);
   font-size: 20px;
 }
@@ -99,22 +109,16 @@ button:hover {
 .transition {
   color: rgb(255, 255, 255);
   font-size: 30px;
-  display: none;  
+  /* display: none;   */
   opacity: 0;
   transition-duration: inherit;
 }
 
-.inv {
+/* .inv {
   padding: 20px;
   color: rgb(10, 222, 255);
   font-size: 20px;
-}
-
-.firstInvText {
-  padding-top: 30px;
-  color: rgb(183, 183, 183);
-  font-size: 22.5px;
-}
+} */
 
 .invText {
   color: rgb(183, 183, 183);
@@ -123,5 +127,11 @@ button:hover {
 
 .invItem {
   color: rgb(94, 185, 255);
-  font-size: 25px;
+  /* font-size: 25px; */
+}
+
+@media (max-width: 750px) {
+  .text h2, .added, #playerInput {
+    font-size: 15px;
+  }
 }
