--- a/style.css
+++ b/style.css
@@ -1,77 +1,78 @@
 body {
-    /* height: 100vh; */
-    /* display: flex;
+  /* height: 100vh; */
+  /* display: flex;
     flex-direction: column;
     align-items: center; */
-    height: 100vh;
-    background: black;
-    /* border: 3px solid blue; */
-    /* height: 20vh; */
-    max-width: 100vw;
-    display: flex;
-    flex-direction: column;
-  }
+  height: 100vh;
+  margin: 0 10px;
+  background: black;
+  /* border: 3px solid blue; */
+  /* height: 20vh; */
+  /* max-width: 100vw; */
+  display: flex;
+  flex-direction: column;
+}
 
 h1 {
-    font-size: 70px;
-    text-align: center;
-    color: white;
-    /* padding-top: 25px; */
-    margin-top: 40vh;
-    /* margin-top: 40vh; */
-    font-family: 'Source Code Pro', monospace;
-    transition-duration: 1s;
-    letter-spacing: normal;
-  }
+  font-size: 70px;
+  text-align: center;
+  color: white;
+  /* padding-top: 25px; */
+  margin-top: 40vh;
+  /* margin-top: 40vh; */
+  font-family: "Source Code Pro", monospace;
+  transition-duration: 1s;
+  letter-spacing: normal;
+}
 
 h2 {
-    font-size: 30px;
-    text-align: center;
-    color: white;
-    /* padding: 20px 100px 0 0; */
-    font-family: 'Source Code Pro', monospace;
-    font-weight: bolder;
-  }
+  font-size: 30px;
+  text-align: center;
+  color: white;
+  /* padding: 20px 100px 0 0; */
+  font-family: "Source Code Pro", monospace;
+  font-weight: bolder;
+}
 
 button {
-    background-color: #ffffff;
-    border: none;
-    color: rgb(0, 0, 0);
-    text-align: center;
-    font-size: 35px;
-    /* font-family: ; */
-    display: block;
-    margin: 0vh auto;
-    transition-duration: 0.5s;
-    border-radius: 8px;
-    padding: 10px 20px;
-    font-family: 'Source Code Pro', monospace;
-  }
+  background-color: #ffffff;
+  border: none;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  font-size: 35px;
+  /* font-family: ; */
+  display: block;
+  margin: 0vh auto;
+  transition-duration: 0.5s;
+  border-radius: 8px;
+  padding: 10px 20px;
+  font-family: "Source Code Pro", monospace;
+}
 
 button:hover {
-    background-color: grey;
-    color: white;
-    cursor: pointer;
-  }
-
+  background-color: grey;
+  color: white;
+  cursor: pointer;
+}
 
 #start-screen {
-    transition-duration: 1.5s;
+  transition-duration: 1.5s;
 }
 
 .text {
   /* margin-top: 20vh; */
   /* margin: 30vh 10vw 0; */
-  margin: auto;
+  /* justify-content: space-around; */
+  margin: auto 8vw;
   transition-duration: 1.5s;
-  vertical-align: middle;
-  max-height: 100vh;
+  /* vertical-align: middle; */
+  /* max-height: 100vh; */
 }
 
 .game-text {
-    transition-duration: inherit;
-    /* display: none;   */
-    opacity: 0;
+  transition-duration: inherit;
+  /* display: none;   */
+  opacity: 0;
 }
 
 .location-text {
@@ -87,7 +88,7 @@ button:hover {
   margin: 20px auto;
   font-size: 30px;
   text-align: center;
-  font-family: 'Source Code Pro', monospace;
+  font-family: "Source Code Pro", monospace;
   /* font-weight: bold; */
   display: none;
   outline: none;
@@ -132,7 +133,9 @@ button:hover {
 }
 
 @media (max-width: 750px) {
-  .text h2, .added, #playerInput {
+  .text h2,
+  .added,
+  #playerInput {
     font-size: 15px;
   }
 }
